fixed main img spacing

--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,7 @@ nav {
   max-width: 600px;
   margin: 0 auto;
   text-align: center;
+  padding-bottom: 50px;
 }
 
 .about-me__picture--mask {
@@ -233,6 +234,8 @@ nav {
 
 .about-me__img {
   width: 100%;
+  height: 100%;
+  max-height: 50vh;
   animation: fade-in 1200ms 800ms backwards;
 }
 
